# agimus_controller_mod

agimus_controller_mod/: CMakeLists.txt  package.xml
agimus_controller_mod/agimus_controller_mod/trajectories/: line_cartesian_space.py  saw_line_cartesian_space.py  trajectory.py
agimus_controller_mod_msgs/: CMakeLists.txt  package.xml
agimus_controller_mod_msgs/action/: TrajectoryAction.action
agimus_controller_mod_msgs/msg/: HoleNeeded.msg  RobotHWState.msg  TrajectoryGoal.msg
agimus_controller_mod_ros/: CMakeLists.txt  package.xml  setup.cfg
agimus_controller_mod_ros/agimus_controller_mod_ros/: node_utils.py  simple_trajectory_goal_publisher.py  simple_trajectory_publisher.py  trajectory_goal_server.py
agimus_controller_mod_ros/agimus_controller_mod_ros/trajectories/: line_cartesian_space.py  line_segment_cartesian_space.py  trajectory.py  trajectory_segment.py
agimus_controller_mod_ros/agimus_controller_mod_ros/trajectory_builders/: line_cartesian_space.py  saw_line_cartesian_space.py  trajectory_builder.py  trajectory_parameters.yaml
