<?xml version="1.0"?>
<package format="3">
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
  <name>agimus_controller_mod_msgs</name>
  <version>0.0.0</version>
  <description>Agimus project ROS messages; some additions</description>
  <maintainer email="martin.matousek@cvut.cz">Martin Matousek</maintainer>

  <license>BSD</license>
  <url type="website">https://www.agimus-project.eu/</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
