[options.entry_points]
console_scripts =
    simple_trajectory_publisher = agimus_controller_mod_ros.simple_trajectory_publisher:main
    simple_trajectory_goal_publisher = agimus_controller_mod_ros.simple_trajectory_goal_publisher:main
    trajectory_goal_server = agimus_controller_mod_ros.trajectory_goal_server:main
